looks like I have working program!